--- a/app/src/main/res/layout/layout_top_views.xml
+++ b/app/src/main/res/layout/layout_top_views.xml
@@ -56,6 +56,7 @@
                 android:paddingStart="16dp" />
 
             <EditText
+                android:id="@+id/etDestinationLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
