--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -20,15 +20,16 @@
             android:layout_height="match_parent" />
         <include
             layout="@layout/layout_top_views"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btRequest"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:text="REQUEST RD"
+            app:cornerRadius="8dp"
+            android:paddingVertical="16dp"
+            android:layout_marginHorizontal="70dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
