--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:text="REQUEST RD"
+            android:backgroundTint="#1B53A6"
             app:cornerRadius="8dp"
             android:paddingVertical="16dp"
             android:layout_marginHorizontal="70dp"
