--- a/app/src/main/res/layout/item_location_search.xml
+++ b/app/src/main/res/layout/item_location_search.xml
@@ -15,9 +15,10 @@
 
 
     <View
+        android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black" />
+        android:background="#C9DFDEDE" />
 
 
 </LinearLayout>
