--- a/app/src/main/res/layout/layout_top_views.xml
+++ b/app/src/main/res/layout/layout_top_views.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="#ECECEC"
+            android:backgroundTint="#DFDEDE"
             app:cardCornerRadius="4dp"
             app:layout_constraintTop_toTopOf="parent">
 
